--- a/index.html
+++ b/index.html
@@ -11,11 +11,10 @@
   
 <a href="about.html">About Page</a>
 
-<a href="https://s3.amazonaws.com/ironboard-learn/lion.jpg" target="_blank"></a>
+<a href="https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion" target="_blank"></a>
 
 
-  <!-- Challenge 3: Wrap the img tag below with a link that uses the target attribute -->
-  <a href= "https://s3.amazonaws.com/ironboard-learn/lion.jpg" alt="a lion" target="_blank">
+ 
 
 </body>
 </html>
