--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   
 <a href="about.html">About Page</a>
 
-<a href="https://s3.amazonaws.com/ironboard-learn/lion.jpg"></a>target="_blank"></a>
+<a href="https://s3.amazonaws.com/ironboard-learn/lion.jpg"> target="_blank"></a>
 
 
  
