--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 
 <a href="https://s3.amazonaws.com/ironboard-learn/lion.jpg"> </a> 
 
-<a href="https://www.google.com" target="_blank">Google</a>
+<a href="https://s3.amazonaws.com/ironboard-learn/lion.jpg" target="_blank">Google</a>
  
 
 </body>
